--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "devDependencies": {
-    "concurrently": "^9.2.1"
-  },
-  "dependencies": {
-    "chart.js": "^4.5.1",
-    "react-chartjs-2": "^5.3.1"
+  "name": "frontend",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
