--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
-    "mongoose": "^8.17.1"
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^8.17.1",
+    "nodemailer": "^7.0.11"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
